# opengl_demo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  readme.md
glm/detail/: func_common.inl
include/glad/: glad.h
lib/: CMakeLists.txt
lib/output/: glad.lib  glfw.lib  soil2.lib
output/resources/shaders/: mainf.fs  mainv.vs  world.vs  worldLight.vs
output/shaders/: fmain.glsl  lightf.glsl  lightv.glsl  mainf.glsl  mainv.glsl  vmain.glsl
resources/models/: cube.txt  mod.txt
resources/shaders/: lightf.fs  lightv.vs  mainf.fs  mainv.vs  world.fs  world.vs  worldLight.fs  worldLight.vs
src/: CMakeLists.txt  Lists.hpp  camera.cpp  camera.hpp  enum.hpp  headerLists.hpp  light.cpp  light.hpp  load.cpp  load.hpp  main.cpp  noise.cpp  noise.hpp  shadow.hpp  texList.txt  world copy 2.hpp  world copy.hpp  world.cpp  world.hpp
src/modules/: Block.hpp  Camera.cpp  Camera.hpp  Controler.cpp  Controler.hpp  Entity.hpp  Render.hpp  Window.cpp  Window.hpp
src/utils/: AABB.hpp  Mesh.hpp  Noise.cpp  Noise.hpp  Single.hpp  Vector.hpp
test/: CMakeLists.txt
test/core/: core_func_integer_bit_count.cpp  core_func_integer_find_lsb.cpp  core_func_integer_find_msb.cpp  core_type_vec2.cpp  core_type_vec3.cpp  core_type_vec4.cpp
test/gtc/: gtc_bitfield.cpp
