file(GLOB src *.cpp)
include_directories(${PROJECT_SOURCE_DIR}/thirdparty/glfw/include)
include_directories(${PROJECT_SOURCE_DIR}/thirdparty/glad/include)
include_directories(${PROJECT_SOURCE_DIR}/thirdparty/glm)
include_directories(${PROJECT_SOURCE_DIR}/thirdparty/stb)
add_executable(demo ${src})

target_link_libraries(demo SDL3)
target_link_libraries(demo glad)
target_link_libraries(demo stb)
target_link_libraries(demo glm)
